[gd_scene load_steps=4 format=3 uid="uid://c5i858weaxwqq"]

[ext_resource type="Script" path="res://scenes/menu.gd" id="1_muvml"]
[ext_resource type="Texture2D" uid="uid://c2oxyhejqg0t7" path="res://scenes/homeScreen.png" id="2_iemq6"]
[ext_resource type="Texture2D" uid="uid://bjqaoyuqvslnw" path="res://sprites/IMG_2016.PNG" id="3_72vge"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_muvml")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 48.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_iemq6")
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 15.0
offset_right = 2082.0
offset_bottom = 2063.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_72vge")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -203.0
offset_right = 196.0
offset_bottom = -51.0
grow_vertical = 0
scale = Vector2(2, 2)

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
text = "Start"
icon_alignment = 1
expand_icon = true

[node name="Instuctions" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Instuctions"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Start")
text = "Options"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Instuctions" to="." method="_on_instuctions_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
